
[project]
name = "nautilus-marketstore"
version = "0.1.0"
description = "MarketStore adapter for NautilusTrader - live streaming and backtest data integration"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "nautilus_trader",
    "pymarketstore",
    "websockets>=12.0",
    "msgpack>=1.0",
    "numpy",
    "pandas",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.uv.sources]
pymarketstore = { path = "../pymarketstore", editable = true }
nautilus_trader = { path = "../nautilus_trader", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nautilus_marketstore"]
